# Learngl

./: CMakeLists.txt
src/: glad.c  main.cpp
